# FreeFempp

./: ._FreeFem++-CoCoa  ._config-wrapper.h  .directory  .gitignore  Makefile  Makefile.am  Makefile.in  README_CVS  WindowsPackage.m4  aclocal.m4  config-version.h  config-wrapper.h  config.h  config.h.in  config.status  config_LIB_INFO  configure  configure.ac  configure.orig  configure.param  copysharedlibs.sh  freefem++_3.11.orig.tar.gz.delta  freefem++_3.11.orig.tar.gz.id  freefem++_3.12.1.orig.tar.gz.delta  freefem++_3.12.1.orig.tar.gz.id  freefem++_3.12.orig.tar.gz.delta  freefem++_3.12.orig.tar.gz.id  freefem++_3.13.1.orig.tar.gz.delta  freefem++_3.13.1.orig.tar.gz.id  freefem++_3.13.2.orig.tar.gz.delta  freefem++_3.13.2.orig.tar.gz.id  freefem++_3.13.3.orig.tar.gz.delta  freefem++_3.13.3.orig.tar.gz.id  freefem++_3.13.orig.tar.gz.delta  freefem++_3.13.orig.tar.gz.id  freefem++_3.14.orig.tar.gz.delta  freefem++_3.14.orig.tar.gz.id  freefem++_3.16.orig.tar.gz.delta  freefem++_3.16.orig.tar.gz.id  regtests.m4  (+1 more)
.pc/: applied-patches
DOC/: Makefile.am  Makefile.in  addfe.aux  addfe.tex  docFFGUI.aux  freefem++doc.aux  freefem++doc.idx  freefem++doc.ilg  freefem++doc.ind  freefem++doc.out  freefem++doc.pdfsync  freefem++doc.tex  freefem++doc.toc
debian/: .directory  FreeFem++-glx.1  FreeFem++-mpi.1  FreeFem++-nw.1  FreeFem++-x11.1  FreeFem++.1  README.Debian  README.source  WHERE_LIBRARY-config  array_long.ii  bamg.1  changelog  changelog~  control  control.orig  control~  copyright  copyright~  cvmsh2.1  docs  drawbdmesh.1  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  ff-c++  ff-c++.1  ff-get-dep  ff-get-dep.1  ff-get-mpirun.1  ff-mpirun.1  ff-pkg-download.1  ffglut.1  ffmedit.1  freefem++-doc.install  freefem++-glx.links  freefem++-gui.install  freefem++-gui.links  freefem++-mpich.links  freefem++-nw.links  freefem++.1  (+32 more)
debian/.pc/: applied-patches
debian/folder/: freefem++-doc
debian/patches/: .directory  DOC-freefem++-doc.patch  arpack.diff  configure-ac.patch  configure.patch  configure.patch.orig  debian-changes-3.11-1  download-blacs-Makefile.patch  epstopdf.diff  (+24 more)
download/: Makefile  Makefile.am  Makefile.in
download/arpack/: ARmake.m4  Makefile.am  Makefile.in
download/blacs/: Bmake.inc  Makefile
download/blas/: Makefile.am  Makefile.in
download/fftw/: Makefile  Makefile.in  Makefile.orig  cxxflags
download/fltk/: Makefile.am  Makefile.in
download/gmm/: cxxflags  cxxflags.orig
download/hips/: Makefile
download/metis/: Makefile.in
download/mshmet/: ._mshmetlib.c
download/mumps/: Makefile
download/parms/: Makefile.in
download/pastix/: Makefile  config-complex.in  config.in
download/scotch/: ._Makefile.patch
download/superludist/: Makefile
download/tetgen/: cxxflags
download/umfpack/: Makefile.am  Makefile.in
download/yams/: Makefile  ff-flags
examples++/: ._aaa-adp.edp  Makefile.am  Makefile.in  Makefile.in.orig  makeref.edp  regtests.edp  regtests.m4
examples++-3d/: ._Laplace-Adapt-3d.edp  ._Laplace-Adapt-aniso-3d.edp  ._beam-3d.edp  ._fallingspheres.edp  ._periodic-3d.edp  Laplace-freeyams-mmg3d.edp  Makefile.in  NSprojection3d-mmg3d-freeyams.edp  all.edp
examples++-bug/: FE0.edp  Makefile.am  Makefile.in  MassP0.edp  NSP1P2.edp  P2b.edp  b.edp  bb.edp  bug-mesh.edp  bug-toto.edp  bugRT.edp  laptopbig.edp  mesh.edp
examples++-chapt3/: ._convects.edp  ._lame.edp  Makefile.am  Makefile.in  regtests.edp  regtests.m4
examples++-eigen/: ._VP-Steklov-Poincare.edp  ._WGM-sphere.edp  Makefile.am  Makefile.in  bb.edp  testeigen.edp
examples++-load/: ._APk-AdaptEpsDeltaPk.edp  ._APk-ExplicitPkTest.edp  ._APk-MetricPk.edp  ._BinaryIO.cpp  ._Element_Mixte.cpp  ._IpoptVI2.edp  ._cmaes.cpp  ._cmaes_interface.h  ._fflapack.cpp  ._iovtk.cpp  ._lapack.cpp  ._msh3.cpp  ._pstream.h  ._scotch.edp  ._tetgen.cpp  ._thresholdings.cpp  GeoDiff.h  Makefile.am  Makefile.in  Makefile.in.orig  Polynomial.h  WHERE_LIBRARY  WHERE_LIBRARY-config  all.edp  dfft.cpp  dfft.edp  dfft.link  ff-pkg-download.in  freefem++.pref  load.edp  load.link  load.link.in  makeref.edp  mat_dervieux.cpp  mat_psi.cpp  myfunction.cpp  regtests.edp  regtests.m4
examples++-mpi/: ._AddLayer2d.idp  ._AddLayer3d.idp  ._DDM-Schwarz-Lame-2d.edp  ._DDM-Schwarz-Lame-3d.edp  ._DDM-Schwarz-Lap-2dd.edp  ._DDM-Schwarz-Lap-3d.edp  ._DDM-Schwarz-Stokes-2d.edp  ._DDM-Schwarz-macro.idp  ._DDM-funcs-v2.idp  ._MPICG.cpp  ._MPIGMRES2D.edp  ._MPIGMRES3D.edp  ._MPIGMRESmacro.idp  ._MPIplot.idp  ._chaleur3D-mumps-old.edp  ._chaleur3D-mumps.edp  ._chaleur3D-superludist.edp  ._dmatrix.hpp  ._essai-com.edp  ._essai.edp  ._getARGV.idp  ._mortar-DN-4-mpi.edp  ._mortar-msh.idp  ._real_SuperLU_DIST_FreeFem.cpp  ._schwarz-3.edp  ._schwarz-b.edp  ._schwarz-c.edp  ._schwarz.edp  ._testsolver_MUMPS.edp  ._testsolver_dsuperlu_dist.edp  ._testsolver_pastix.edp  MUMPS-dist.edp  MUMPS-old.edp  Makefile.am  Makefile.in  Stokes-v1-matrix-hips.edp  Stokes-v1-matrix-parms.edp  chaleur3D-hips.edp  chaleur3D-mumps-old.edp  freefem++.pref  (+2 more)
examples++-other/: Makefile.am  Makefile.in  speedtest.sh
examples++-tutorial/: ._AdaptResidualErrorIndicator.edp  ._BEM-C.edp  ._FEComplex.edp  ._LapDG2.edp  ._LaplaceRT.edp  ._NS-BackwardStep.edp  ._VI-adap.edp  ._VI.edp  ._adapt.edp  ._adaptindicatorP1.edp  ._regtests.m4  ._sparse-matrix.edp  BEM-C.edp  Makefile.am  Makefile.in  Makefile.in.orig  all.edp  regtests.edp  regtests.m4
src/: Makefile.am  Makefile.in  Makefile.in.orig
src/Algo/: ._BrentLS.hpp  ._CubicLS.hpp  ._LineSearch.hpp  ._NRJ.hpp  ._Param.hpp  ._lgalgo.cpp  Makefile.am  Makefile.in
src/glx/: Makefile.am  Makefile.in
src/ide/: Makefile.am  Makefile.in  commands.cpp  commands.hpp  cs.cpp  draw.cpp  draw.hpp  editor.cpp  editor.hpp  highlight.cpp  highlight.hpp  hl_lex.c++  hl_lex.l++  hl_lexyacc.hpp  hl_yacc.c++  hl_yacc.h  hl_yacc.y++  images.hpp  server.cpp  server.hpp  socket.cpp  socket.hpp  spawn.cpp  spawn.hpp  testhighlight.cpp  testhighlight.sh  threads.cpp  threads.hpp  tostring.hpp  windres.h  windres.rc
src/nw/: Makefile.am  Makefile.in
src/x11/: Makefile.am  Makefile.in
(+147 files in other folders)
