# Downloading and compiling extra libraries
# -----------------------------------------

# $Id: Makefile.am,v 1.4 2007/04/17 10:08:23 hecht Exp $

SUBDIRS=blas arpack umfpack fltk

all-local: lib include

lib: 
	mkdir lib
include:
	mkdir  include

clean-local:
	-rm -rf  lib include 
