# Makefile using Automake + Autoconf
# ----------------------------------
# $Id: Makefile.am,v 1.3 2004-06-29 16:41:14 lehyaric Exp $

# This is not compiled as a separate library because its
# interconnections with other libraries have not been solved.

EXTRA_DIST=BFGS.hpp BrentLS.hpp CG.hpp CubicLS.hpp defs.hpp lgalgo.cpp	\
LineSearch.hpp NewtonRaphson.hpp NRJ.hpp Optima.hpp Param.hpp		\
RosenBrock.hpp
